--- a/sections/40-DSM.tex
+++ b/sections/40-DSM.tex
@@ -64,8 +64,10 @@
     	\hline
     	Polradwinkel gem. ESB & $\vartheta = arg(Up)$\\
     	\hline
-    	Wirkleistung des DSG & $P_{el}=3\cdot
-    	U_{Kl}\cdot\frac{U_p}{X_d}\sin\vartheta$\\
+    	Wirkleistung des DSG & $P_{el}=\sqrt{3}\cdot
+    	U_{Kl}\cdot\frac{U_p}{X_d}\cdot \sin\vartheta = \sqrt{3} \cdot U_{Kl} \cdot I \cdot \cos{\varphi}$\\
+    	\hline
+    	Wirkkomponente des Statorstroms & $I \cdot \cos{\varphi} = \frac{U_p}{X_d} \cdot \sin{\varphi}$ \\
     	\hline
     	Antriebsmoment des DSG & $M_{Welle}=\frac{3\cdot60}{2\pi\cdot n \cdot
     	\eta}\cdot U_{Kl}\cdot\frac{U_p}{X_d}\cdot\sin\vartheta$\\
