sorry war natürlich doch 3, hatte U_N im Kopf

--- a/sections/40-DSM.tex
+++ b/sections/40-DSM.tex
@@ -64,8 +64,8 @@
     	\hline
     	Polradwinkel gem. ESB & $\vartheta = arg(Up)$\\
     	\hline
-    	Wirkleistung des DSG & $P_{el}=\sqrt{3}\cdot
-    	U_{Kl}\cdot\frac{U_p}{X_d}\cdot \sin\vartheta = \sqrt{3} \cdot U_{Kl} \cdot I \cdot \cos{\varphi}$\\
+    	Wirkleistung des DSG & $P_{el}=3\cdot
+    	U_{Kl}\cdot\frac{U_p}{X_d}\cdot \sin\vartheta = 3 \cdot U_{Kl} \cdot I \cdot \cos{\varphi}$\\
     	\hline
     	Wirkkomponente des Statorstroms & $I \cdot \cos{\varphi} = \frac{U_p}{X_d} \cdot \sin{\varphi}$ \\
     	\hline
