Linie in Tabelle hinzugefügt

--- a/sections/40-DSM.tex
+++ b/sections/40-DSM.tex
@@ -43,6 +43,7 @@
     \begin{tabular}[c]{ | p{7cm} | p{8cm} |}
     	\hline
     	Polpaarzahl	& $p$\\
+    	\hline
     	Drehfeldzahl $[s^{-1}]$ bzw $[min^{-1}]$ & $n_d=\frac{f}{p}$ bzw
     	$n_d=\frac{f\cdot 60}{p}$\\
     	\hline
