Ergänzung Antriebsmoment DSG

--- a/sections/40-DSM.tex
+++ b/sections/40-DSM.tex
@@ -70,8 +70,12 @@
     	\hline
     	Wirkkomponente des Statorstroms & $I \cdot \cos{\varphi} = \frac{U_p}{X_d} \cdot \sin{\varphi}$ \\
     	\hline
-    	Antriebsmoment des DSG & $M_{Welle}=\frac{3\cdot60}{2\pi\cdot n \cdot
-    	\eta}\cdot U_{Kl}\cdot\frac{U_p}{X_d}\cdot\sin\vartheta$\\
+    	Antriebsmoment des DSG & $\begin{aligned}
+    								M_{Welle} 	&=\frac{3\cdot60}{2\pi\cdot n \cdot
+    								    				\eta}\cdot U_{Kl}\cdot\frac{U_p}{X_d}\cdot\sin\vartheta\\
+    								    		&= \frac{3\cdot60}{2\pi\cdot n \cdot
+    								    	    	\eta}\cdot U_{Kl}\cdot I \cdot \cos{\varphi}= \frac{P_{mech}}{\omega}
+    								\end{aligned}$\\
     	\hline
     \end{tabular}
 
