--- a/sections/20-GSM.tex
+++ b/sections/20-GSM.tex
@@ -82,7 +82,7 @@
             Anlaufmoment &
             $M_A = \frac{k_1 \cdot \Phi \cdot U}{R_1}$ \\
             \hline
-            Leerlaufmoment &
+            Leerlaufdrehzahl &
             $n_0 = \frac{U_A}{k_1 \cdot \Phi}$ \\
             \hline
             Magnetischer Fluss des Hauptfeldes & 
