Formelsammlung ElMasch hinzugefügt.

--- a/ElMasch.tex
+++ b/ElMasch.tex
@@ -12,6 +12,7 @@
 
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{pdfpages}
 
 % Setzt ein zentriertes Bild mit Beschriftung --> DANKE UELI!!!
 % Syntax: \abb{Pfad zum Bild}{Bildgrösse}{Beschriftung des Bildes}
@@ -37,4 +38,5 @@ Abbildung \arabic{abbildungen}: #3
 Genau du bruchsch dia!
 \input{idiotenseite/trigo/subsections/Dreiecksformeln}
 \input{idiotenseite/elektrotechnik/subsections/ohmscheLeistung}
+\includepdf[pages={2-7}]{Formelsammlung.pdf}
 \end{document}
