--- a/sections/10-Grundlagen.tex
+++ b/sections/10-Grundlagen.tex
@@ -1,6 +1,6 @@
 \section{Generelle Eigenschaften el. Maschinen}
     \subsection{Generelle Formeln von el. Maschinen}
-        \renewcommand{\arraystretch}{1.8}
+        \renewcommand{\arraystretch}{1.6}
         \begin{tabular}[c]{ | p{5cm} | p{8cm} | p{4cm} | }
             \hline
             \textbf{Name} &
@@ -18,6 +18,7 @@
             Lorentzkraft &
             $\vec{F} = Q (\vec{v} \times \vec{B})=I(\vec{l}\times \vec{B}) \hspace{1cm} |\vec{F}| = Q \cdot v \cdot B \cdot \sin\alpha$ &
             $N$ \\
+            Lorentzkraft wenn Leiter Senkrecht zum Feld & $ F = Q(l \cdot B) = I(l \cdot B) $& \\
             Ampèresches Gesetz &
             $F=\frac{Q_2 \cdot v_2 \cdot Q_1 \cdot v_1 \cdot \mu}{r^2 \cdot 4\pi}$ &
             \\
@@ -30,9 +31,12 @@
             $F$ = Daumen, $v$ = Zeigefinger, $B$ = Mittelfinger &
             Bei $Q < 0$ wechselt Richtung von B! \\
             \hline
-            Magnetische Feldstärke &
-            $\vec{H} = \frac{ \vec{B}}{\mu }$ &
+            Magnetische Feldstärke & 
+            $\vec{H} = \frac{ \vec{B}}{\mu }$   &
             $\frac{A}{m}$ \\
+            H - Gerader Leiter & $ H = \frac{I}{2 \pi \cdot r}$ r = Abstand zum Leiter& \\ 
+            H - Stromdurchflossener Ring & $ H =  \frac{I \cdot r^2}{2(x^2+r^2)^{\frac{3}{2}}}$ r = Radius &  \\
+            H - Zylinderspuhle & $ H = \frac{I \cdot N}{\sqrt{l^2 + D^2}}$ D = Durchmesser , l = Längespuhle & \\
             Magnetische Spannung &
             $V_{mAB} = \int\limits \vec{H}(s) \cdot \vec{ds}$ ($V_m$ ist abhängig vom Weg) &
             $A$ \\
@@ -95,7 +99,7 @@
             \renewcommand{\arraystretch}{1}
             $U = L \cdot \frac{di}{dt}= \frac{z}{2\cdot A} \cdot B \cdot l \cdot v$ \quad 
             \begin{array}[t]{ll}
-                z & Anz. EL \\
+                z & Anz. Leiter in Serie \\
                 A & Anz. paralleller L.
             \end{array}
             \renewcommand{\arraystretch}{1.8}
