Grundlagen 		- Tippfehler behoben GSM 			- Formeln ergänzt DSMGrundlagen 	-\newpage entfernt um Platz zu sparen

--- a/sections/10-Grundlagen.tex
+++ b/sections/10-Grundlagen.tex
@@ -34,9 +34,9 @@
             Magnetische Feldstärke & 
             $\vec{H} = \frac{ \vec{B}}{\mu }$   &
             $\frac{A}{m}$ \\
-            H - Gerader Leiter & $ H = \frac{I}{2 \pi \cdot r}$ r = Abstand zum Leiter& \\ 
-            H - Stromdurchflossener Ring & $ H =  \frac{I \cdot r^2}{2(x^2+r^2)^{\frac{3}{2}}}$ r = Radius &  \\
-            H - Zylinderspuhle & $ H = \frac{I \cdot N}{\sqrt{l^2 + D^2}}$ D = Durchmesser , l = Längespuhle & \\
+            H - Gerader Leiter & $ H = \frac{I}{2 \pi \cdot r}$ \qquad r = Abstand zum Leiter& \\ 
+            H - Stromdurchflossener Ring & $ H =  \frac{I \cdot r^2}{2(x^2+r^2)^{\frac{3}{2}}}$ \qquad r = Radius &  \\
+            H - Zylinderspuhle & $ H = \frac{I \cdot N}{\sqrt{l^2 + D^2}}$ \quad D = Durchmesser , l = Längespuhle & \\
             Magnetische Spannung &
             $V_{mAB} = \int\limits \vec{H}(s) \cdot \vec{ds}$ ($V_m$ ist abhängig vom Weg) &
             $A$ \\
