--- a/sections/20-GSM.tex
+++ b/sections/20-GSM.tex
@@ -56,6 +56,8 @@
     	Mech. Leistung an der Welle &
     	$P_{Welle}=P_{Luft}-V_{Fe}-V_{Reib}-V_{zus}$ \quad $V{...} =$ Verluste\\
     	\hline
+    	Nenndrehmoment $M_{N}$ & $\frac{P_{Mech}}{2 \cdot \pi n_{0}}$ \qquad Vorsicht N in $min^{-1}$!! \\ \hline
+    	Ankerwiderstand $R_{A}$ & $R_{A} = \frac{U_{N} - U_{iN}}{I_{N}} $ \qquad $U_{iN} =$ Induzierte Spannung \\ \hline
     \end{tabular}
     
     	
@@ -94,7 +96,7 @@
             M_{el}$\\
             \hline
         \end{tabular}
-        \renewcommand{\arraystretch}{1.5}
+        \renewcommand{\arraystretch}{1.3}
         
     \subsection{Reihenschluss Maschine}
     Auch bekannt als Seriemaschine oder Hauptschlussmaschine\\
@@ -107,11 +109,12 @@
             Anlaufstrom &
             $I_A=\frac{U_N}{\sum R_a}=\frac{U_N I_N^2}{U_N I-P_N}$ \\
             \hline
-            & $M_{el}=\frac{L_e}{N_e}k_1\cdot I_a^2$\\
+            Elektrisch verursachtes Drehmoment & $M_{el}=\frac{L_e}{N_e}k_1\cdot I_a^2$\\
             \hline
             Leerlaufdrehzahl &
             $\omega_m=\frac{N_e}{L_e}\frac{U_a}{k_1I_a}-\frac{N_e}{L_e}\frac{R_a+R_e}{k_1}=\frac{\sqrt{N_e}\cdot
             U_a}{\sqrt{L_ek_1M_{el}}}-\frac{N_e}{L_e}\frac{R_a+R_e}{k_1}$\\
             \hline
+            Anlaufdrehmoment bei begrenztem Anlaufstrom & $M^*_A = (\frac{I^*_A}{I_N})^2 \cdot M_N$ \\ \hline
         \end{tabular}
         \renewcommand{\arraystretch}{1.5}
