Viele kleine Detailänderungen und entfernen weiterer Newpages und damit nur noch 15 Seiten DSM Grafik ausgetauscht, Allg. Formel erweitert und doppeltes entfernt

--- a/ElMasch.tex
+++ b/ElMasch.tex
@@ -1,6 +1,6 @@
 % Dokumentinformationen
 \newcommand{\titleinfo}{Elekrische Maschinen - Formelsammlung}
-\newcommand{\authorinfo}{HSR-Stud (orig. Braun \& Co.)}
+\newcommand{\authorinfo}{HSR-Stud (orig. Braun \& Co.) \& Gregor}
 \newcommand{\versioninfo}{$Revision: Marie $ - powered by \LaTeX}
 
 % Header
