--- a/sections/10-Grundlagen.tex
+++ b/sections/10-Grundlagen.tex
@@ -25,7 +25,7 @@
             \hline
             Drehmoment von Schleifen &
             $M_{max} = 2 \cdot F \cdot \frac{d}{2}= F \cdot d = N \cdot B \cdot I \cdot d \cdot l = \frac{P_{Mech}}{2 \pi n_0} $ &
-            Nm; $n_0= Drehzahl$ \\
+            Nm; $n_0= $Drehzahl Vorsicht $n_0$ nicht in $min^-1$ \\
             \hline
             \textbf{3-Finger-Regel:} (rechte Hand) &
             $F$ = Daumen, $v$ = Zeigefinger, $B$ = Mittelfinger &
