--- a/sections/20-GSM.tex
+++ b/sections/20-GSM.tex
@@ -56,7 +56,7 @@
     	Mech. Leistung an der Welle &
     	$P_{Welle}=P_{Luft}-V_{Fe}-V_{Reib}-V_{zus}$ \quad $V{...} =$ Verluste\\
     	\hline
-    	Nenndrehmoment $M_{N}$ & $\frac{P_{Mech}}{2 \cdot \pi n_{0}}$ \qquad Vorsicht N in $min^{-1}$!! \\ \hline
+    	Nenndrehmoment $M_{N}$ & $\frac{P_{Mech}}{2 \cdot \pi n_{0}}$ \qquad Vorsicht $n_0$ nicht in $min^{-1}$!! \\ \hline
     	Ankerwiderstand $R_{A}$ & $R_{A} = \frac{U_{N} - U_{iN}}{I_{N}} $ \qquad $U_{iN} =$ Induzierte Spannung \\ \hline
     \end{tabular}
     
