--- a/sections/40-DSM.tex
+++ b/sections/40-DSM.tex
@@ -12,7 +12,7 @@
         \end{description}
 
     \subsection{Ersatzschaltbild}
-        %\begin{minipage}{11cm}
+        \begin{minipage}{11cm}
             \abb{images/Ersatz_DSM.png}{8cm}{Ersatzschaltung DSM}    
             Es gibt 2 Unterteilungen: \\
             \begin{description}
@@ -23,47 +23,59 @@
                 Betrieb} gibt der DSM Blindleistung ab. Bei \textbf{Untererregung} oder auch \textbf{induktiven Betrieb}
                 nimmt er auf.
             \end{description}
-        %\end{minipage}
-        %\begin{minipage}{8cm}
-        %    \abb{images/Zeigerdiagram.png}{6cm}{Betriebszustände einer DSM}
-        %\end{minipage}\\
-        \begin{tabular}{lll}
-        	& Übererregung & Untererregung \\
-        Motor & & \\
-        &
-        \input{./tikz/DSM/ZeigerMotorUeber.tex} &
-        \input{./tikz/DSM/ZeigerMotorUnter.tex}\\
-        Generator & & \\
-        &
-        \input{./tikz/DSM/ZeigerGeneratorUeber.tex} &
-        \input{./tikz/DSM/ZeigerGeneratorUnter.tex}\\
-        \end{tabular}
+        \end{minipage}
+        \begin{minipage}{8cm}
+            \abb{images/Zeigerdiagram.png}{6cm}{Betriebszustände einer DSM}
+        \end{minipage}\\
+      %  \begin{tabular}{lll}
+      %  	& Übererregung & Untererregung \\
+      %  Motor & & \\
+      %  &
+      %  \input{./tikz/DSM/ZeigerMotorUeber.tex} &
+      %  \input{./tikz/DSM/ZeigerMotorUnter.tex}\\
+      %  Generator & & \\
+      %  &
+      %  \input{./tikz/DSM/ZeigerGeneratorUeber.tex} &
+      %  \input{./tikz/DSM/ZeigerGeneratorUnter.tex}\\
+      %  \end{tabular}
+      
+      \subsubsection{Phasenschieber}
+      Ein DSG, der im Idealfall nur Blindleistung mit dem Netz austauscht. In der Praxis müssen die Verluste des DSG(Reibung, Ventilation, Stromwärme etc.) entweder vom Netz oder von einer Antriebsmaschine gedeckt werden.
+      Der Phasenschieber kennt folgende Betriebsmodi:
+      \begin{itemize}
+      \item \textbf{\emph{übererregt}} $(U_p > U_N)$: der DSG gibt Blindleistung ab, verhält sich also bezüglich seiner Klemmen wie ein Kondensator.
+      \item \textbf{\emph{untererregt}} $(U_p > U_N)$: der DSG nimmt Blindleistung auf, verhält sich also bezüglich seiner Klemmen wie eine Induktivität.
+      \end{itemize}
      
     \subsection{Allgemeine Formeln}
-    \begin{tabular}[c]{ | p{7cm} | p{8cm} |}
+    \begin{tabular}[c]{ | p{6.5cm} | p{11.5cm} |}
     	\hline
     	Polpaarzahl	& $p$\\
     	\hline
     	Drehfeldzahl $[s^{-1}]$ bzw $[min^{-1}]$ & $n_d=\frac{f}{p}$ bzw
     	$n_d=\frac{f\cdot 60}{p}$\\
     	\hline
-    	Polpaarzahl & $p$ \\
-    	\hline
     	Schlupf $[-]$ & $s=\frac{n_d-n}{n_d}$\\
     	\hline
     	Strang- bzw. Phasenspannung &
-    	$\underline{U}_{kl}=\underline{U}_p+U_{XD}$\\
+    	$\underline{U}_{kl}=\underline{U}_p+\underline{U}_{XD}$\\
     	\hline
-    	Spannungsfall über Synchroner Reaktanz & $U_{XD}=jX_d\cdot\underline{I}$\\
+
+    	Spannungsfall über Synchroner Reaktanz & $U_{XD}=jX_d\cdot\underline{I}$
+    	\\
     	\hline
     	Leerlauferregerstrom für Nennspannung & $I_{E0N}$\\
     	\hline
     	Lastabhängiger Erregerstrom & $\frac{I_E}{I_{E0N}}=\frac{U_p}{U_{Kl}}$\\
     	\hline
+    	Klemmenspannung & $U_{kl} = \frac{U_N}{\sqrt{3}}$\\
+    	\hline
     	Polradspannung & $U_p=\sqrt{U_{Kl}^2+X_d^2\cdot I^2+2\cdot U_{Kl}\cdot
     	X_d \cdot I\cdot sin \varphi}$\\
     	\hline
-    	Polradwinkel gem. ESB & $\vartheta = arg(Up)$\\
+    	Polradspannung im Inselnetz & $U_p=\sqrt{U_{Kl}^2+X_d^2} $\\
+    	\hline
+    	Elekrischer Lastwinkel oder Polradwinkel gem. ESB & $\vartheta = arg(U_p)$ (Winkel zwischen $U_{p}$ und $U_{kl}$)\\
     	\hline
     	Wirkleistung des DSG & $P_{el}=3\cdot
     	U_{Kl}\cdot\frac{U_p}{X_d}\cdot \sin\vartheta = 3 \cdot U_{Kl} \cdot I \cdot \cos{\varphi}$\\
@@ -72,9 +84,10 @@
     	\hline
     	Antriebsmoment des DSG & $\begin{aligned}
     								M_{Welle} 	&=\frac{3\cdot60}{2\pi\cdot n \cdot
-    								    				\eta}\cdot U_{Kl}\cdot\frac{U_p}{X_d}\cdot\sin\vartheta\\
+    								    				\eta}\cdot U_{Kl}\cdot\frac{U_p}{X_d}\cdot\sin\vartheta
     								    		&= \frac{3\cdot60}{2\pi\cdot n \cdot
-    								    	    	\eta}\cdot U_{Kl}\cdot I \cdot \cos{\varphi}= \frac{P_{mech}}{\omega}
+    								    	    	\eta}\cdot U_{Kl}\cdot I \cdot \cos{\varphi}= \frac{P_{mech}}{\omega} \\
+    								    	    &= \frac{\sqrt{3} \cdot U_N \cdot I_N \cdot cos\varphi_N \cdot p}{\eta \cdot 2 \cdot \pi \cdot f_N} 
     								\end{aligned}$\\
     	\hline
     \end{tabular}
@@ -140,4 +153,3 @@
         \end{minipage}
         \\ \\ \\
         $$ U_P = \sqrt{\frac{U^2_{Netz}}{3} + X_d^2 \cdot I^2 + 2 \cdot \frac{U_{Netz}}{\sqrt{3}}\cdot X_d \cdot I \cdot \sin(\varphi)} $$
-        \newpage
