--- a/sections/50-DAM.tex
+++ b/sections/50-DAM.tex
@@ -77,28 +77,31 @@
         \end{minipage}
 
         \newpage
-    \subsection{Orskurve des DAM, Heyland-Kreis 2. Anleitung}
+    \subsection{Anleitung zur Orskurve des DAM, Heyland-Kreis}
     \begin{enumerate}
       \item Daten für Leerlauf und (echten) Kurzschluss der DAM verifizieren
       bzw. berechnen
       \item Massstäbe festlegen
       \begin{enumerate}
         \item Strommassstab $m_{I_{Ph}}$ Wählen bzw. Tipp befolgen
-        \item Leistungsmassstab $m_{P_{gesamt}}=3U_{Ph}\cdot m_{I_{Ph}}$
+        \item Leistungsmassstab $m_{P_{gesamt}}=3\cdot U_{Ph}\cdot m_{I_{Ph}}$
         \item Drehmomentsmassstab $m_M=\frac{m_{P_{gesamt}}}{2\pi n_0} =
         \frac{m_{P_{gesamt}}\cdot p}{2\pi f}$
       \end{enumerate}
-      \item Leerlaufpunkt $(s=0)$ aus $P_0$ und $I_0$ bestimmen und in die
-      Grafik $U_{ph},-jI_{Ph}$ eintragen
-      \item Anlaufpunkt $(s=1)$ aus $P_{KS}$ und $I_{KS}$ bestimmen und in die
-      Grafik $U_{ph},-jI_{Ph}$ eintragen
-      \item Mittelpunkt der Strecke (Anlaufpunkt-Leerlaufpunkt) bestimmen und
-      Ossanakreis zeichnen
-      \item Bremspunkt $s=\infty$ zeichnen je nach Aufgabenstellung
+      \item Konstruktion der Punkte:
+      Länge des Strompfeiles in den Zirkel nehmen und Kreis um Ursprung einzeichnen. Zu jedem Punkt die Verluste als Parallele zur $-j$-Achse einzeichnen, Schnittpunkt ergibt den gesuchten Punkt.
       \begin{enumerate}
-        \item Anlaufmoment = lotrechte Strecke ausgehend vom Anlaufpunkt $(s=1)$
+      	\item Leerlaufpunkt $(s=0)$ aus $P_0$ und $I_0$ bestimmen und in die Grafik $U_{ph},-jI_{Ph}$ eintragen
+        \item Anlaufpunkt $(s=1)$ aus $P_{KS}$ und $I_{KS}$ bestimmen und in die Grafik $U_{ph},-jI_{Ph}$ eintragen
+      \end{enumerate}
+      \item Eisenverlüste $P_{Fe}$ als Parallele zur $-j$-Achse eintragen (z.B. Leistungsaufnahme im Leerlauf)
+      \item Mittelsenkrechte der Strecke (Anlaufpunkt-Leerlaufpunkt) bestimmen, Schnittpunkt mit Eisenverlusten $P_{Fe}$: M
+      \item Ossanakreis zeichnen
+      \item Bremspunkt $s=\infty$ zeichnen: Senkrechte vom Anlaufpunkt auf $-j$-Achse, dann entweder Stromwärmeverluste vom Anlaufpunkt unterteilen in Stator und Rotor oder Anlaufmoment einzeichnen.
+      \begin{enumerate}
+        \item Anlaufmoment $\rightarrow$ lotrechte Strecke ausgehend vom Anlaufpunkt $(s=1)$ zur $-j$-Achse
         \item Verluste im Rotor und Stator $\rightarrow$ lotrechte Strecke
-        ausgehend vom Anlaufpunkt $(s=1)$. Tipp: $V=3\cdot I^2\cdot R$
+        ausgehend vom Anlaufpunkt $(s=1)$ zur $-j$-Achse. Tipp: $V=3\cdot I^2\cdot R$
       \end{enumerate}
       \item Schlupfgerade
       \begin{enumerate}
@@ -106,12 +109,13 @@
         \item Skalieren: Schnittpunkt mit der Strecke
         (Bremspunkt-Leerlaufpunkt) ist bei $s=1$
       \end{enumerate}
+      Schlupf herauslesen: Verbindung von gegebenem Punkt zum Bremspunkt $s=\infty$, Schnittpunkt mit der Schlupfgerade entspricht dem Schlupf.
       \item $s_N$ einzeichnen je nach Aufgabenstellung
       \begin{enumerate}
         \item Bei Nennstrom gegeben: Kreis mit Stromlänge um Ursprung
         \item Bei Nennleistung gegeben: Senkrechte mit Länge der Leistung
         zwischen Leistungslinie und Ossanakreis
-        \item Bei Nennmoment gegeben: Senkrechte mit Lände des Moments zwischen
+        \item Bei Nennmoment gegeben: Senkrechte mit Länge des Moments zwischen
         Momentenlinie und Ossanakreis
       \end{enumerate}
     \end{enumerate}   
@@ -124,35 +128,35 @@
 	
 	        \newpage
 
-    \subsection{Ortskurve des DAM, Heyland- Kreis}
-        \begin{minipage}{9cm}
-            \abb{images/Heylandkreis.png}{8cm}{Heylandkreis mit Leistungs- und Momenteneinteilung}
-        \end{minipage}
-        \begin{minipage}{8cm}
-            \abb{images/Heylandkreis_schlupf.png}{7cm}{Heylandkreis mit Schlupfskalierung}
-        \end{minipage} \\
-        \begin{minipage}{10.5cm}
-            \begin{enumerate}     
-                \item Den Massstab für den Strom wählen zB. $m_I=\frac{0.2 A}{mm}$
-                \item Den Massstab für die Leistung berechnen: $P_{gesamt}=3U_N I_{Ph}$ $m_P=3U_N m_I$
-                \item Den Massstab für das Drehmoment berechnen: $M=\frac{P_\delta}{2\pi n_0};$  $m_M= \frac{p\cdot m_P}{2\pi f}$  p = Polpaar
-                \item $s=0 \rightarrow s_{0}$ messen und einzeichnen
-                \item $s=1 \rightarrow s_{1}$ messen und einzeichnen
-                \item Verlustleistung bei $s_{0}$ herauslesen ($P_{Fe}$) (ev. wenn nicht schon getan, mit \\ $P_{FE} = U \cdot I_{Wirk}$ den Leistungs-Massstab bestimmen.)\\
-                \item $\perp$ vom Mittelpunkt von $\overline{s_{0}s_{1}}$
-                \item Schnittpunkt auf $s_{0}- Achse (Richtung -j) = M$
-                \item Kreis um M mit Schnittpunkt $s_{0}$ und $s_{1}$
-                \item $I_N =$ Tangente auf dem Kreis vom Ursprung (0,0)
-                \item $P_{v1}$ bei $s_{1}$ ausrechnen = $P_{R_1}$ von der Parallele zur J-Achse, welche durch M geht nach oben abtragen.
-                \item Verbindung des Punktes zu $s_{0}$ verlängern $\rightarrow$ $s_{\infty}$
-                \item \textit{ Bei Vereinfachung $R_{Cu}=0:\\ s_{0}$ auf Imaginär- Achse; $s_{\infty}$ auf Imaginär-Achse}
-                \item Schlupf- Skalierung: $\perp$ auf $\overline{s_{\infty}M}$
-                \item Schnittpunkt mit Verlängerung $\overline{s_{1}s_{\infty}}= 1$
-                \item Schnittpunkt mit $\overline{s_{0}s_{\infty}}= 0$
-                \item Dazwischen lineare Unterteilung
-            \end{enumerate}
-        \end{minipage}
-        \begin{minipage}{7cm}
-            \includegraphics[width=6cm]{../ElMasch/images/StromortskurveDAM.png}\\
-            \includegraphics[width=8cm]{../ElMasch/images/OssannakreisPkipp.png}
-        \end{minipage}
+%   \texttt{ \subsection{Ortskurve des DAM, Heyland- Kreis}
+%        \begin{minipage}{9cm}
+%            \abb{images/Heylandkreis.png}{8cm}{Heylandkreis mit Leistungs- und Momenteneinteilung}
+%        \end{minipage}
+%        \begin{minipage}{8cm}
+%            \abb{images/Heylandkreis_schlupf.png}{7cm}{Heylandkreis mit Schlupfskalierung}
+%        \end{minipage} \\
+%        \begin{minipage}{10.5cm}
+%            \begin{enumerate}     
+%                \item Den Massstab für den Strom wählen zB. $m_I=\frac{0.2 A}{mm}$
+%                \item Den Massstab für die Leistung berechnen: $P_{gesamt}=3U_N I_{Ph}$ $m_P=3U_N m_I$
+%                \item Den Massstab für das Drehmoment berechnen: $M=\frac{P_\delta}{2\pi n_0};$  $m_M= \frac{p\cdot m_P}{2\pi f}$  p = Polpaar
+%                \item $s=0 \rightarrow s_{0}$ messen und einzeichnen
+%                \item $s=1 \rightarrow s_{1}$ messen und einzeichnen
+%                \item Verlustleistung bei $s_{0}$ herauslesen ($P_{Fe}$) (ev. wenn nicht schon getan, mit \\ $P_{FE} = U \cdot I_{Wirk}$ den Leistungs-Massstab bestimmen.)\\
+%                \item $\perp$ vom Mittelpunkt von $\overline{s_{0}s_{1}}$
+%                \item Schnittpunkt auf $s_{0}- Achse (Richtung -j) = M$
+%                \item Kreis um M mit Schnittpunkt $s_{0}$ und $s_{1}$
+%                \item $I_N =$ Tangente auf dem Kreis vom Ursprung (0,0)
+%                \item $P_{v1}$ bei $s_{1}$ ausrechnen = $P_{R_1}$ von der Parallele zur J-Achse, welche durch M geht nach oben abtragen.
+%                \item Verbindung des Punktes zu $s_{0}$ verlängern $\rightarrow$ $s_{\infty}$
+%                \item \textit{ Bei Vereinfachung $R_{Cu}=0:\\ s_{0}$ auf Imaginär- Achse; $s_{\infty}$ auf Imaginär-Achse}
+%                \item Schlupf- Skalierung: $\perp$ auf $\overline{s_{\infty}M}$
+%                \item Schnittpunkt mit Verlängerung $\overline{s_{1}s_{\infty}}= 1$
+%                \item Schnittpunkt mit $\overline{s_{0}s_{\infty}}= 0$
+%                \item Dazwischen lineare Unterteilung
+%            \end{enumerate}
+%        \end{minipage}
+%        \begin{minipage}{7cm}
+%            \includegraphics[width=6cm]{../ElMasch/images/StromortskurveDAM.png}\\
+%            \includegraphics[width=8cm]{../ElMasch/images/OssannakreisPkipp.png}
+%        \end{minipage}}
