--- a/sections/50-DAM.tex
+++ b/sections/50-DAM.tex
@@ -94,7 +94,7 @@
       	\item Leerlaufpunkt $(s=0)$ aus $P_0$ und $I_0$ bestimmen und in die Grafik $U_{ph},-jI_{Ph}$ eintragen
         \item Anlaufpunkt $(s=1)$ aus $P_{KS}$ und $I_{KS}$ bestimmen und in die Grafik $U_{ph},-jI_{Ph}$ eintragen
       \end{enumerate}
-      \item Eisenverlüste $P_{Fe}$ als Parallele zur $-j$-Achse eintragen (z.B. Leistungsaufnahme im Leerlauf)
+      \item Eisenverluste $P_{Fe}$ als Parallele zur $-j$-Achse eintragen (z.B. Leistungsaufnahme im Leerlauf)
       \item Mittelsenkrechte der Strecke (Anlaufpunkt-Leerlaufpunkt) bestimmen, Schnittpunkt mit Eisenverlusten $P_{Fe}$: M
       \item Ossanakreis zeichnen
       \item Bremspunkt $s=\infty$ zeichnen: Senkrechte vom Anlaufpunkt auf $-j$-Achse, dann entweder Stromwärmeverluste vom Anlaufpunkt unterteilen in Stator und Rotor oder Anlaufmoment einzeichnen.
