Diverse Anpassungen + Zusätzliche Formeln (Formeln die nur in der übungsprüfung vorkamen nicht aber in den Unterlagen) + Anpassung auf sparsame Platznutzung

--- a/sections/10-Grundlagen.tex
+++ b/sections/10-Grundlagen.tex
@@ -1,6 +1,6 @@
 \section{Generelle Eigenschaften el. Maschinen}
     \subsection{Generelle Formeln von el. Maschinen}
-        \renewcommand{\arraystretch}{1.6}
+        \renewcommand{\arraystretch}{1.4}
         \begin{tabular}[c]{ | p{5cm} | p{8cm} | p{4cm} | }
             \hline
             \textbf{Name} &
@@ -45,6 +45,7 @@
             $\Theta = \oint\vec{H} \cdot \vec{ds} = \sum\limits_{x=1}^n H_x \cdot l_x = \int\limits \vec{J} \cdot \vec{dA} \vee \underbrace{\sum I_k}_{= N I} = V_m$ &
             $A$ \\
             \hline
+            Durchflutungsgesetz 2 & $\Theta = H_L \cdot l_L = \frac{B_L}{\muup} \cdot 2 \cdot \deltaup $ & \\ \hline
             Magnetischer Fluss &
             $\Phi = \int \vec{B} \vec{dA}$ &
             $Vs = Wb$ (Weber) \\
@@ -97,7 +98,7 @@
             \hline
             Spannung &
             \renewcommand{\arraystretch}{1}
-            $U = L \cdot \frac{di}{dt}= \frac{z}{2\cdot A} \cdot B \cdot l \cdot v$ \quad 
+            $U = L \cdot \frac{di}{dt}= \frac{z}{2\cdot A} \cdot B \cdot l \cdot $v \quad 
             \begin{array}[t]{ll}
                 z & Anz. Leiter in Serie \\
                 A & Anz. paralleller L.
@@ -105,7 +106,7 @@
             \renewcommand{\arraystretch}{1.8}
             &
             V \\
-            \hline
+            & v $= \pi \cdot N \cdot d $ & Achtung N in $\frac{1}{s^-1}$ \\ \hline
             Wirkungsgrad &
             $\eta = \frac{P_2}{P_1}=\frac{abgegebene P}{aufgenommene P}= \frac{P_1 - P_Verluste}{P_1}$ &
             - \\
@@ -115,7 +116,7 @@
             \\
             \hline
         \end{tabular}
-        \renewcommand{\arraystretch}{1.5}	
+        \renewcommand{\arraystretch}{1.4}	
         
         \subsection{Übersicht über die Motorenarten}
         \abb{images/uebersicht_el.png}{11cm}{}
