--- a/sections/50-DAM.tex
+++ b/sections/50-DAM.tex
@@ -76,7 +76,6 @@
             $s_k = \frac{R_2^`}{\sqrt{R_1^2 + X_1^2}} \approx \frac{R_2^`}{X_\sigma}$    
         \end{minipage}
 
-        \newpage
     \subsection{Orskurve des DAM, Heyland-Kreis 2. Anleitung}
     \begin{enumerate}
       \item Daten für Leerlauf und (echten) Kurzschluss der DAM verifizieren
@@ -120,14 +119,11 @@
 		
     \input{tikz/Heyland.tex}
 		\end{sideways}
-	
-
-
-    \subsection{Ortskurve des DAM, Heyland- Kreis}
-        \begin{minipage}{9cm}
+	    \subsection{Ortskurve des DAM, Heyland- Kreis}
+        \begin{minipage}[t]{9cm}
             \abb{images/Heylandkreis.png}{8cm}{Heylandkreis mit Leistungs- und Momenteneinteilung}
         \end{minipage}
-        \begin{minipage}{8cm}
+        \begin{minipage}[t]{8cm}
             \abb{images/Heylandkreis_schlupf.png}{7cm}{Heylandkreis mit Schlupfskalierung}
         \end{minipage} \\
         \begin{minipage}{10.5cm}
