--- a/sections/60-Antriebstechnik.tex
+++ b/sections/60-Antriebstechnik.tex
@@ -1,5 +1,5 @@
 \section{Antriebstechnik}
-
+\renewcommand{\arraystretch}{1.1}
 \subsection{Gradlinige Bewegungen}
 \begin{tabular}[c]{ | p{5cm} | p{8cm} | p{4cm} | }
 	\hline
@@ -28,7 +28,7 @@
 \end{tabular}
 
 \subsection{Massenträgheit und Beschleunigung}
-\begin{tabular}[c]{ | p{5cm} | p{8cm} | p{4cm} | }
+\begin{tabular}[c]{ | p{8cm} | p{7cm} | p{2cm} | }
 	\hline
 	Trägheitsmoment & $J=\int\limits_{0}^mr^2\cdot dm$ & $kgm^2$ \\
 	\hline
@@ -42,7 +42,7 @@
 \end{tabular}
 
 \subsection{Umrechnen der Bewegungsgrössen auf die Motorwelle}
-\begin{tabular}[c]{ | p{14cm} | p{3.5cm} | }
+\begin{tabular}[c]{ | p{14.5cm} | p{3cm} | }
 	\hline
 	Übersetzungsverhältnis des Getriebes & $i=\frac{n_1}{n_2}$\\
 	\hline
