--- a/ElMasch.tex
+++ b/ElMasch.tex
@@ -6,6 +6,7 @@
 % Header
 \include{header/header}
 \usepackage{tikz}
+\usepackage{textcomp, pxfonts}
 \usetikzlibrary{intersections}
 \usetikzlibrary{calc}
 \usetikzlibrary{through}
