Kleine Ergänzung/Verallgemeinerung beim Erregerstrom der DSM

--- a/sections/40-DSM.tex
+++ b/sections/40-DSM.tex
@@ -58,7 +58,7 @@
     	\hline
     	Leerlauferregerstrom für Nennspannung & $I_{E0N}$\\
     	\hline
-    	Lastabhängiger Erregerstrom & $\frac{I_E}{I_{E0N}}=\frac{U_p}{U_{Kl}}$\\
+    	Lastabhängiger Erregerstrom & $\frac{I_{Eneu}}{I_{Ealt}}=\frac{U_{pneu}}{U_{palt}}$ (im Leerlauf ist $U_p = U_{Kl}$)\\
     	\hline
     	Polradspannung & $U_p=\sqrt{U_{Kl}^2+X_d^2\cdot I^2+2\cdot U_{Kl}\cdot
     	X_d \cdot I\cdot sin \varphi}$\\
