Kleinere Anpassungen: -an einigen Stellen \underline eingefügt -Polpaarzahl einmal pro Tabelle angeben reicht… -U_{ph} -> U_{Str}. Das Wort "Phase" wird im Alltag als Polleiter/Aussenleiter (verkettet) verwendet, jedoch ist in der Stromortskurve der Strang abgebildet.

--- a/sections/40-DSM.tex
+++ b/sections/40-DSM.tex
@@ -47,14 +47,12 @@
     	Drehfeldzahl $[s^{-1}]$ bzw $[min^{-1}]$ & $n_d=\frac{f}{p}$ bzw
     	$n_d=\frac{f\cdot 60}{p}$\\
     	\hline
-    	Polpaarzahl & $p$ \\
-    	\hline
     	Schlupf $[-]$ & $s=\frac{n_d-n}{n_d}$\\
     	\hline
     	Strang- bzw. Phasenspannung &
-    	$\underline{U}_{kl}=\underline{U}_p+U_{XD}$\\
+    	$\underline{U}_{Kl}=\underline{U}_p+\underline{U}_{X_d}$\\
     	\hline
-    	Spannungsfall über Synchroner Reaktanz & $U_{XD}=jX_d\cdot\underline{I}$\\
+    	Spannungsfall über Synchroner Reaktanz & $\underline{U}_{X_d}=jX_d\cdot\underline{I}$\\
     	\hline
     	Leerlauferregerstrom für Nennspannung & $I_{E0N}$\\
     	\hline
@@ -63,7 +61,7 @@
     	Polradspannung & $U_p=\sqrt{U_{Kl}^2+X_d^2\cdot I^2+2\cdot U_{Kl}\cdot
     	X_d \cdot I\cdot sin \varphi}$\\
     	\hline
-    	Polradwinkel gem. ESB & $\vartheta = arg(Up)$\\
+    	Polradwinkel gem. ESB & $\vartheta = arg(\underline{U}_p)$\\
     	\hline
     	Wirkleistung des DSG & $P_{el}=3\cdot
     	U_{Kl}\cdot\frac{U_p}{X_d}\cdot \sin\vartheta = 3 \cdot U_{Kl} \cdot I \cdot \cos{\varphi}$\\
