--- a/sections/50-DAM.tex
+++ b/sections/50-DAM.tex
@@ -83,16 +83,16 @@
       bzw. berechnen
       \item Massstäbe festlegen
       \begin{enumerate}
-        \item Strommassstab $m_{I_{Ph}}$ Wählen bzw. Tipp befolgen
-        \item Leistungsmassstab $m_{P_{gesamt}}=3\cdot U_{Ph}\cdot m_{I_{Ph}}$
+        \item Strommassstab $m_{I_{Str}}$ Wählen bzw. Tipp befolgen
+        \item Leistungsmassstab $m_{P_{gesamt}}=3\cdot U_{Str}\cdot m_{I_{Str}}$
         \item Drehmomentsmassstab $m_M=\frac{m_{P_{gesamt}}}{2\pi n_0} =
         \frac{m_{P_{gesamt}}\cdot p}{2\pi f}$
       \end{enumerate}
       \item Konstruktion der Punkte:
       Länge des Strompfeiles in den Zirkel nehmen und Kreis um Ursprung einzeichnen. Zu jedem Punkt die Verluste als Parallele zur $-j$-Achse einzeichnen, Schnittpunkt ergibt den gesuchten Punkt.
       \begin{enumerate}
-      	\item Leerlaufpunkt $(s=0)$ aus $P_0$ und $I_0$ bestimmen und in die Grafik $U_{ph},-jI_{Ph}$ eintragen
-        \item Anlaufpunkt $(s=1)$ aus $P_{KS}$ und $I_{KS}$ bestimmen und in die Grafik $U_{ph},-jI_{Ph}$ eintragen
+      	\item Leerlaufpunkt $(s=0)$ aus $P_0$ und $I_0$ bestimmen und in die Grafik $U_{Str},-jI_{Str}$ eintragen
+        \item Anlaufpunkt $(s=1)$ aus $P_{KS}$ und $I_{KS}$ bestimmen und in die Grafik $U_{Str},-jI_{Str}$ eintragen
       \end{enumerate}
       \item Eisenverluste $P_{Fe}$ als Parallele zur $-j$-Achse eintragen (z.B. Leistungsaufnahme im Leerlauf)
       \item Mittelsenkrechte der Strecke (Anlaufpunkt-Leerlaufpunkt) bestimmen, Schnittpunkt mit Eisenverlusten $P_{Fe}$: M
