Schreibfehler und Unklarheiten beseitigt Änderungen aus HSR-Stud übernommen

--- a/ElMasch.tex
+++ b/ElMasch.tex
@@ -6,14 +6,13 @@
 % Header
 \include{header/header}
 \usepackage{tikz}
-\usepackage{textcomp, pxfonts}
+\usepackage{textcomp, pxfonts, enumitem}
 \usetikzlibrary{intersections}
 \usetikzlibrary{calc}
 \usetikzlibrary{through}
 
 \usepackage{caption}
 \usepackage{subcaption}
-
 % Setzt ein zentriertes Bild mit Beschriftung --> DANKE UELI!!!
 % Syntax: \abb{Pfad zum Bild}{Bildgrösse}{Beschriftung des Bildes}
 \newcounter{abbildungen} \stepcounter{abbildungen}
