--- a/sections/20-GSM.tex
+++ b/sections/20-GSM.tex
@@ -99,7 +99,7 @@
             \hline
             Drehmoment &
             $M=\frac{k_2 \cdot \Phi \cdot U_{Anker}}{R_{Anker}} - \frac{k_1 \cdot k_2 \cdot\phi^2 \cdot n}{R_A} =\frac{P_{mech}}{2\pi n_N}=\frac{U_{iN}I_N}{2\pi n_N}\sim I_E \cdot U_A - I_E ^2 \cdot n$
-            \quad Achtung: $[n] = s^{-1}$\\
+            \quad Achtung: $[n] = min^{-1}$\\
             \hline
             Leistung &
             $P_{Anker}= U_i \cdot I \pm I^2 \cdot R_A $(+ bei Motor; - bei Generator) \\
