--- a/sections/40-DSM.tex
+++ b/sections/40-DSM.tex
@@ -60,12 +60,12 @@
     	\hline
     	Schlupf $[-]$ & $s=\frac{n_d-n}{n_d}$\\
     	\hline
-    	Spannungsfall über Synchroner Reaktanz & $U_{XD}=jX_d\cdot\underline{I}$
+    	Spannungsfall über Synchroner Reaktanz & $\underline{U}_{XD}=jX_d\cdot\underline{I}$
     	\\
     	\hline
     	Leerlauferregerstrom für Nennspannung & $I_{E0N}$\\
     	\hline
-    	Lastabhängiger Erregerstrom & $\frac{I_E}{I_{E0N}}=\frac{U_p}{U_{Kl}}$\\
+    	Lastabhängiger Erregerstrom & $\frac{I_{Eneu}}{I_{Ealt}}=\frac{U_{Pneu}}{U_{Palt}}$(im Leerlauf ist $U_p = U_{Kl}$)\\
     	\hline
     	Klemmenspannung & $U_{kl} = \frac{U_N}{\sqrt{3}}$\\
     	\hline
