--- a/sections/50-DAM.tex
+++ b/sections/50-DAM.tex
@@ -75,42 +75,44 @@
             $\frac{M}{M_K}\approx \frac{2}{\frac{s}{s_k}+\frac{s_k}{s}}$ \\
             $s_k = \frac{R_2^`}{\sqrt{R_1^2 + X_1^2}} \approx \frac{R_2^`}{X_\sigma}$    
         \end{minipage}
-
     \subsection{Orskurve des DAM, Heyland-Kreis 2. Anleitung}
-    \begin{enumerate}
+    \begin{enumerate}[nosep]
       \item Daten für Leerlauf und (echten) Kurzschluss der DAM verifizieren
       bzw. berechnen
       \item Massstäbe festlegen
-      \begin{enumerate}
-        \item Strommassstab $m_{I_{Ph}}$ Wählen bzw. Tipp befolgen
-        \item Leistungsmassstab $m_{P_{gesamt}}=3U_{Ph}\cdot m_{I_{Ph}}$
+      \begin{enumerate}[nosep]
+        \item Strommassstab $m_{I_{Str}}$ Wählen bzw. Tipp befolgen
+        \item Leistungsmassstab $m_{P_{gesamt}}=3U_{Str}\cdot m_{I_{Str}}$
         \item Drehmomentsmassstab $m_M=\frac{m_{P_{gesamt}}}{2\pi n_0} =
         \frac{m_{P_{gesamt}}\cdot p}{2\pi f}$
       \end{enumerate}
-      \item Leerlaufpunkt $(s=0)$ aus $P_0$ und $I_0$ bestimmen und in die
-      Grafik $U_{ph},-jI_{Ph}$ eintragen
-      \item Anlaufpunkt $(s=1)$ aus $P_{KS}$ und $I_{KS}$ bestimmen und in die
-      Grafik $U_{ph},-jI_{Ph}$ eintragen
-      \item Mittelpunkt der Strecke (Anlaufpunkt-Leerlaufpunkt) bestimmen und
-      Ossanakreis zeichnen
-      \item Bremspunkt $s=\infty$ zeichnen je nach Aufgabenstellung
-      \begin{enumerate}
-        \item Anlaufmoment = lotrechte Strecke ausgehend vom Anlaufpunkt $(s=1)$
+       \item Konstruktion der Punkte:
+       Länge des Strompfeiles in den Zirkel nehmen und Kreis um Ursprung einzeichnen. Zu jedem Punkt die Verluste als Parallele zur $-j$-Achse einzeichnen, Schnittpunkt ergibt den gesuchten Punkt.
+      \begin{enumerate}[nosep]
+     \item Leerlaufpunkt $(s=0)$ aus $P_0$ und $I_0$ bestimmen und in die Grafik $U_{Str},-jI_{Str}$ eintragen
+      \item Anlaufpunkt $(s=1)$ aus $P_{KS}$ und $I_{KS}$ bestimmen und in die Grafik $U_{Str},-jI_{Str}$ eintragen
+      \end{enumerate}
+      \item Eisenverlüste $P_{Fe}$ als Parallele zur $-j$-Achse eintragen (z.B. Leistungsaufnahme im Leerlauf)
+      \item Mittelsenkrechte der Strecke (Anlaufpunkt-Leerlaufpunkt) bestimmen, Schnittpunkt mit Eisenverlusten $P_{Fe}$: M
+      \item Ossanakreis zeichnen
+      \item Bremspunkt $s=\infty$ zeichnen: Senkrechte vom Anlaufpunkt auf $-j$-Achse, dann entweder Stromwärmeverluste vom Anlaufpunkt unterteilen in Stator und Rotor oder Anlaufmoment einzeichnen.
+      \begin{enumerate}[nosep]
         \item Verluste im Rotor und Stator $\rightarrow$ lotrechte Strecke
-        ausgehend vom Anlaufpunkt $(s=1)$. Tipp: $V=3\cdot I^2\cdot R$
+        ausgehend vom Anlaufpunkt $(s=1)$ zur $-j$-Achse. Tipp: $V=3\cdot I^2\cdot R$
       \end{enumerate}
       \item Schlupfgerade
-      \begin{enumerate}
+      \begin{enumerate}[nosep]
         \item Senkrechte zur Strecke M-Bremspunkt
         \item Skalieren: Schnittpunkt mit der Strecke
         (Bremspunkt-Leerlaufpunkt) ist bei $s=1$
       \end{enumerate}
+      Schlupf herauslesen: Verbindung von gegebenem Punkt zum Bremspunkt $s=\infty$, Schnittpunkt mit der Schlupfgerade entspricht dem Schlupf.
       \item $s_N$ einzeichnen je nach Aufgabenstellung
-      \begin{enumerate}
+      \begin{enumerate}[nosep]
         \item Bei Nennstrom gegeben: Kreis mit Stromlänge um Ursprung
         \item Bei Nennleistung gegeben: Senkrechte mit Länge der Leistung
         zwischen Leistungslinie und Ossanakreis
-        \item Bei Nennmoment gegeben: Senkrechte mit Lände des Moments zwischen
+        \item Bei Nennmoment gegeben: Senkrechte mit Länge des Moments zwischen
         Momentenlinie und Ossanakreis
       \end{enumerate}
     \end{enumerate}   
