--- a/ElMasch.tex
+++ b/ElMasch.tex
@@ -1,11 +1,25 @@
 % Dokumentinformationen
+\documentclass[10pt,a4paper]{article}
 \newcommand{\titleinfo}{Elekrische Maschinen - Formelsammlung}
 \newcommand{\authorinfo}{HSR-Stud (orig. Braun \& Co.)}
 \newcommand{\versioninfo}{$Revision: Marie $ - powered by \LaTeX}
 
 % Header
 \include{header/header}
+
+\usepackage[utf8]{inputenc}
+\usepackage[german]{babel}
+\usepackage[T1]{fontenc}
+\usepackage{amsmath}
+\usepackage{amsfonts}
+\usepackage{amssymb}
+\usepackage{graphicx}
+\usepackage{multicol}
+\usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
 \usepackage{tikz}
+\usepackage{adjustbox}      
+\usepackage{filecontents}
+\usepackage{rotating}
 \usetikzlibrary{intersections}
 \usetikzlibrary{calc}
 \usetikzlibrary{through}
