Anpassen auf Header 2.0

--- a/ElMasch.tex
+++ b/ElMasch.tex
@@ -1,16 +1,18 @@
 % Dokumentinformationen
-\newcommand{\titleinfo}{Elekrische Maschinen - Formelsammlung}
-\newcommand{\authorinfo}{HSR-Stud (orig. Braun \& Co.) \& Gregor}
-\newcommand{\versioninfo}{$Revision: Marie $ - powered by \LaTeX}
+\title{Elekrische Maschinen}
+\author{HSR-Stud (orig. Braun \& Co.) \& Gregor}
+%\version{$Revision: Marie $ - powered by \LaTeX}
+\documentclass[10pt,twoside,a4paper,fleqn]{article}
 
 % Header
-\include{header/header}
+\include{header/zusammenfassung}
 \usepackage{tikz}
 \usepackage{textcomp, pxfonts, enumitem}
 \usetikzlibrary{intersections}
 \usetikzlibrary{calc}
 \usetikzlibrary{through}
 
+\usepackage{adjustbox}
 \usepackage{caption}
 \usepackage{subcaption}
 % Setzt ein zentriertes Bild mit Beschriftung --> DANKE UELI!!!
