ZF: Neu mit Inhaltsverzeichnis

--- a/Zusammenfassung.tex
+++ b/Zusammenfassung.tex
@@ -9,8 +9,14 @@
 
 % Document
 \begin{document}
+\setcounter{tocdepth}{2} 	%Es wird nur bis Subsection im Inhaltsverzeinichs angezeigt
+\tableofcontents 				%Inhaltsverzeichnis
+\newpage
 \section{Die elektrodynamischen Grundgesetze}
 \input{sections/VL1-eldynGrundgesetzte}
+\section{Magnetkreis-Begriff, Permanentmagnet, Reluktanzkraft}
+\input{sections/VL2-Magnet}
+
 
 
 \end{document}
