Stoff VL4/5 bis und mit Nebenschluss

--- a/Zusammenfassung.tex
+++ b/Zusammenfassung.tex
@@ -16,8 +16,8 @@
 \input{sections/VL1-eldynGrundgesetzte}
 \section{Magnetkreis-Begriff, Permanentmagnet, Reluktanzkraft}
 \input{sections/VL2-Magnet}
-
-
+\section{Gleichstrommaschine (GSM)}
+\input{sections/VL45-GSM}
 
 
 \end{document}
