Stoff VL45 fertig

--- a/Zusammenfassung.tex
+++ b/Zusammenfassung.tex
@@ -4,6 +4,7 @@
 \documentclass[10pt,twoside,a4paper,fleqn]{article}
 
 % Header
+\usepackage{paralist}
 \include{header/zusammenfassung}
 
 
@@ -18,6 +19,8 @@
 \input{sections/VL2-Magnet}
 \section{Gleichstrommaschine (GSM)}
 \input{sections/VL45-GSM}
+\section{Schrittmotor}
+\input{sections/VL67-Schrittmotor}
 
 
 \end{document}
