--- a/sections/VL45-GSM.tex
+++ b/sections/VL45-GSM.tex
@@ -217,3 +217,86 @@ $M_a = \frac{U \cdot \Psi}{R_a}$\\
 
 $n_0 = \frac{U}{2 \cdot \pi \cdot \Psi}$
 \end{minipage}
+
+\subsubsection{Reihenschluss}
+\begin{minipage}{0.3 \linewidth}
+\includegraphics[width = \linewidth]{./Pics/VL45/Reihenschluss}
+\end{minipage}
+\begin{minipage}{0.7 \linewidth}
+Dir Erreger. und Ankerwicklung werden in Serie an die gemeinsame Spannungsquelle geschaltet. Bei dem Reihenschluss sind die Anker- und Erregerstrom gleich und deswegen stark abhängig voneinander. \\
+
+Analyse des Drehmoments: \\
+
+$M = I \cdot \Psi$ \\
+
+$U = (R_a + R_e) \cdot I + 2 \cdot \pi \cdot n \cdot \Psi$ \\
+
+$\Psi = L_e \cdot I$ \\
+
+$M = I \cdot \Psi = L_e (\frac{U}{R_a + R_e + 2 \cdot \pi \cdot n \cdot L_e})^2$ \\
+
+Anlaufmoment: \\
+
+$n = 0 \Rightarrow M_A = \frac{L_e \cdot U^2}{(R_a + R_e)^2}$   $(Nm)$ \\
+
+Bezugsdrehzahl: \\
+
+$n_b = \frac{R_a + R_e}{2 \cdot \pi \cdot L_e}$   $(\frac{1}{s})$
+\end{minipage}
+
+\begin{minipage}{0.3 \linewidth}
+\includegraphics[width = \linewidth]{./Pics/VL45/Reihenschluss2}
+\end{minipage}
+\begin{minipage}{0.7 \linewidth}
+\large{Achtung:} $M \rightarrow 0 \Rightarrow n \rightarrow \inf $\textbf{(Sicherheitsrisiko!)} \\
+
+$\frac{M}{M_A} = \frac{1}{(1 + \frac{n}{n_b})^2} $  \\
+
+$M_A = \frac{L_e \cdot U^2}{(R_a + R_e)^2} $ \\
+
+$n_b = \frac{R_a + R_e}{2 \cdot \pi \cdot L_e}$
+\end{minipage}
+
+\subsection{Drehzahlregelung}
+\begin{minipage}{0.3 \linewidth}
+\includegraphics[width = \linewidth]{./Pics/VL45/Drehzahlregelung}
+\end{minipage}
+\begin{minipage}{0.7 \linewidth}
+Die Grundgleichung der Gleichstrommaschine im Nebenschluss: \\
+
+$I_a = \frac{U- 2\cdot\pi \cdot n \cdot \Psi}{R_a}$\\
+
+$M = \frac{U \cdot \Psi}{R_a}- \frac{2\cdot\pi\Psi^2}{R_a}\cdot n$\\
+
+Gemäss den Grundgleichungen sind die Kennlinien $I_a(n)$ und $M(n)$ von $R_a$, $U$ und $\Psi$ stark abhängig. Deswegen wird die Drehzahlregelung durch den zusätzlichen Widerstand $R_v$ im Ankerkreis (verlustreich), durch die Ankerspannung (Verlustarm), oder durch Erregung (Verlustarm) durchgeführt.
+\end{minipage}
+
+\begin{minipage}{0.3 \linewidth}
+\includegraphics[width = \linewidth]{./Pics/VL45/Drehzahlregelung2}
+\end{minipage}
+\begin{minipage}{0.3 \linewidth}
+\includegraphics[width = \linewidth]{./Pics/VL45/Drehzahlregelung3}
+\end{minipage}
+
+\subsection{Anlauf}
+Wegen der Stabilität des Netzwerks muss der Anlaufstrom der Gleichstrommotoren mit einer Leistung über 2 kW begrenzt werden. Ein beispiel der Anlaufstrombegrenzung durch die $R_v$-Regelung sieht so aus: \\
+
+\includegraphics[width = 0.8 \linewidth]{./Pics/VL45/Anlauf}
+
+\subsection{Anwendungsbereiche und Schlussanmerkungen}
+\begin{itemize}
+\item Die Gleichstrommaschine sind konstruktiv sehr kompliziert und damit auch sehr teuer.
+\item Die Gleichstrommaschine mit Fremd-, Neben- und Permanenterregung werden heute nur als Motoren eingesetzt.
+\item Die Anwendung in den lokalen Gleichstromnetzen: Fahrzeuge, Schiffe, Batterie-gespeiste Geräte, usw.
+\item Spezielle Anwendung wobei stetige Drehzahlregelung erforderlich ist:
+\begin{compactitem}
+\item Werkzeugmaschine
+\item Haspeln
+\item Drehrohröfen
+\item Papiermaschinen
+\item Textilmaschinen,
+\item usw.
+\end{compactitem}
+\item Nebenschluss-GSM: 0.25-3000 kW, 0-3000 $min^{-1}$ (für regelbare Antriebe)
+\item Reihenschluss-GSM: 0.5 -1000 kW, 0-10'000 $min^{-1}$ (für Fahrzeugantriebe)
+\end{itemize}
