--- a/Zusammenfassung.tex
+++ b/Zusammenfassung.tex
@@ -21,6 +21,8 @@
 \input{sections/VL45-GSM}
 \section{Schrittmotor}
 \input{sections/VL67-Schrittmotor}
-
-
+\section{Dreiphasenwechselstrom-Drehfelderzeugung}
+\input{sections/VL89-Drehfeld}
+\section{Synchronmaschine}
+\input{sections/VL910-Synchronmaschine}
 \end{document}
