--- a/sections/VL45-GSM.tex
+++ b/sections/VL45-GSM.tex
@@ -52,7 +52,7 @@ $U_a = R_a \cdot I_a + L_a \cdot \frac{dI_a}{dt} + E$
 \includegraphics[width = \linewidth]{./Pics/VL45/GSM3}
 \end{minipage}
 \begin{minipage}{0.6\linewidth}
-Die Position der Bürsten ist sehr wichtig für die verlustfreie Kommutierung. Wenn eine Bürste gleichzeitig die beiden Schleifringe berührt ($\alpha = 180\degree$), muss in diesem Moment die induzierte Spannung der entsprechenden Wicklungsektion gleich Null werden. Sonst werden Lichtbögen zwischen den Lamellen des Kommutators entstanden, was als Läuferfeuer bekannt ist. Das Läuferfeuer ist ein klares Anzeichen der schlechten Kommutierung, die die Lebensdauer der Maschine wesentlich verkürzen könnte.
+Die Position der Bürsten ist sehr wichtig für die verlustfreie Kommutierung. Wenn eine Bürste gleichzeitig die beiden Schleifringe berührt ($\alpha = 180^\circ$), muss in diesem Moment die induzierte Spannung der entsprechenden Wicklungsektion gleich Null werden. Sonst werden Lichtbögen zwischen den Lamellen des Kommutators entstanden, was als Läuferfeuer bekannt ist. Das Läuferfeuer ist ein klares Anzeichen der schlechten Kommutierung, die die Lebensdauer der Maschine wesentlich verkürzen könnte.
 \end{minipage}
 
 \subsection{Ersatzschaltbild}
