--- a/sections/VL67-Schrittmotor.tex
+++ b/sections/VL67-Schrittmotor.tex
@@ -42,9 +42,9 @@ Die magnetische Reluktanzkraft ist immer anziehen, d.h. die Reluktanzkraft versu
 \item Die Steuersignale produzieren das schrittweise Drehen der Motorwelle.
 \item Die Stator-Zahnzahl: $Z_S = 4$
 \item Die Rotor-Zahnzahl: $Z_R = 2$
-\item Der Stator-Winkel: $\alpha_S = \frac{2\cdot \pi}{Z_S} = 90 \deg$
-\item Der Rotor-Winkel: $\alpha_R =  \frac{2\cdot \pi}{Z_R} = 180 \deg$
-\item Der Vollschritt-Winkel: $\alpha_0 = \alpha_R - \alpha_s = 90 \deg$ 
+\item Der Stator-Winkel: $\alpha_S = \frac{2\cdot \pi}{Z_S} = 90^\circ$
+\item Der Rotor-Winkel: $\alpha_R =  \frac{2\cdot \pi}{Z_R} = 180^\circ$
+\item Der Vollschritt-Winkel: $\alpha_0 = \alpha_R - \alpha_s = 90^\circ$ 
 \item Der Vollschritt-Winkel bezeichnet die Bewegung des Rotors pro Einzelsteuerimpuls.
 \item Die Strangzahl: $m = \frac{Z_S}{Z_S - Z_R} = 2$
 \item Die Schrittzahl: $N_p = \frac{2\cdot \pi}{\alpha_0} = 4$
