Stoff VL1213 + Korrektur von VL910 auf VL1011

--- a/Zusammenfassung.tex
+++ b/Zusammenfassung.tex
@@ -24,5 +24,8 @@
 \section{Dreiphasenwechselstrom-Drehfelderzeugung}
 \input{sections/VL89-Drehfeld}
 \section{Synchronmaschine}
-\input{sections/VL910-Synchronmaschine}
+\input{sections/VL1011-Synchronmaschine}
+\section{Asynchronmaschine}
+\input{sections/VL1213-Asynchronmaschine}
+
 \end{document}
